<resources>
    <string name="app_name">AppListaCursos</string>
    <string name="txt_Titulo">Aplicativo Lista VIP Curso Android</string>
    <string name="txt_hint_edit_nome">Primeiro Nome</string>
    <string name="txt_hint_sobrenome">Sobrenome</string>
    <string name="txt_telefone_contato">Telefone de Contato</string>
    <string name="txt_curso">Curso desejado</string>
    <string name="txt_button_limpar">Limpar</string>
    <string name="txt_button_salvar">Salvar</string>
    <string name="txt_buton_finalizar">Finalizar</string>
    <string name="primeiroNome">Primeiro Nome</string>
    <string name="sobrenome">Sobrenome</string>
    <string name="curso">Nome do Curso</string>
    <string name="telefone">Telefone de Conato</string>
    <string name="btn_limpar">Limpar</string>
    <string name="btn_salvar">Salvar</string>
    <string name="btn_finalizar">FINALIZAR</string>
    <string name="label">FINALIZAR</string>

</resources>